@@ -1,11 +1,11 @@
-/**
+/*
  * Copyright 2014 Stephen Cummins
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  *
  * You may obtain a copy of the License at
- * 		http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -15,16 +15,13 @@
  */
 package uk.ac.cam.cl.dtg.segue.dao;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
 import com.fasterxml.jackson.core.JsonParser;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonDeserializer;
-import com.fasterxml.jackson.databind.JsonMappingException;
+
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Content deserializer will try and use the map built up in the ContentMapper class to determine what subtype of
@@ -41,20 +38,20 @@ public class TrimWhitespaceListDeserializer extends JsonDeserializer<List<String
 
     @Override
     public List<String> deserialize(final JsonParser jsonParser, final DeserializationContext deserializationContext)
-            throws IOException, JsonProcessingException, JsonMappingException {
+            throws IOException {
 
         @SuppressWarnings("unchecked")
         List<String> listOfStringToTrim = jsonParser.readValueAs(ArrayList.class);
 
         int index = 0;
         for (String s : listOfStringToTrim) {
-            if (!s.trim().equals("")) {
+            if (!s.trim().isEmpty()) {
                 listOfStringToTrim.set(index, s.trim());
             }
             index++;
         }
 
-        listOfStringToTrim.removeAll(Arrays.asList(""));
+        listOfStringToTrim.removeAll(List.of(""));
 
         return listOfStringToTrim;
     }
